Making this my own

--- a/_config.yml
+++ b/_config.yml
@@ -6,13 +6,13 @@ pygments:         true
 permalink:        pretty
 
 # Setup
-title:            Hyde
-tagline:          'A Jekyll theme'
-description:      'A brazen two-column <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that pairs a prominent sidebar with uncomplicated content. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
-url:              http://hyde.getpoole.com
+title:            Thomas J Lodato
+tagline:          'Design Researcher & PhD Student'
+description:      'I am in school for life.'
+url:              http://deathpillow.github.io
 
 author:
-  name:           'Mark Otto'
+  name:           'Thomas James Lodato'
   url:            https://twitter.com/mdo
 
 paginate:         5
