--- a/_config.yml
+++ b/_config.yml
@@ -1,24 +1,69 @@
-# Dependencies
-markdown:         redcarpet
-pygments:         true
-
-# Permalinks
-permalink:        pretty
-
-# Setup
-title:            Thomas J Lodato
-tagline:          'Design Researcher & PhD Student'
-description:      'I am in school for life.'
+title:            ThmsJmsLdt
+description:      In school for life.
+logo:             site-logo.png
+disqus_shortname: #sosimpletheme
+search:           true
+#Comment out url when working locally to resolve base urls correctly
 url:              http://deathpillow.github.io
 
-author:
-  name:           'Thomas James Lodato'
-  url:            https://twitter.com/mdo
+# Owner/author information
+owner:
+  name:           Thomas James Lodato
+  avatar:         #michael-rose-photo.jpg
+  email:          thomas.lodato@gmail.com.com
+  # Social networking links used in footer. Update and remove as you like.
+  twitter:        "blckmtlrbtdth"
+  facebook:       #"michaelrose"
+  github:         "deathpillow"
+  linkedin:       #"michaelrose"
+  instagram:      #"mmistakes"
+  tumblr:         #"mademistakes"
+  stackexchange:  
+  flickr:                 
+  # For Google Authorship https://plus.google.com/authorship
+  google_plus:    #"http://plus.google.com/118238196859537351707"
 
-paginate:         5
+# Analytics and webmaster tools stuff goes here
+google_analytics:   #UA-2011187-2
+google_verify:      #UQj93ERU9zgECodaaXgVpkjrFn9UrDMEzVamacSoQ8Y
+# https://ssl.bing.com/webmaster/configure/verify/ownership Option 2 content= goes here
+bing_verify:        #D81F4C18A6CB3018F64D7C827D953DFD   
 
-# Custom vars
-version:          0.0.1
+# Links to include in top navigation
+# For external links add external: true
+links:
+  - title: About
+    url: /about/
+  - title: Articles
+    url: /articles/
+  - title: Theme Setup
+    url: /theme-setup/
+  #- title: Made Mistakes
+   # url: http://mademistakes.com
+    #external: true
 
-github:
-  repo:           https://github.com/poole/hyde
+# http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
+timezone:    America/New_York
+future:      true
+pygments:    true
+markdown:    kramdown
+
+# https://github.com/mojombo/jekyll/wiki/Permalinks
+permalink:   /:categories/:title/
+
+kramdown:
+  auto_ids: true
+  footnote_nr: 1
+  entity_output: as_char
+  toc_levels: 1..6
+  use_coderay: false
+
+  coderay:
+    coderay_line_numbers: 
+    coderay_line_numbers_start: 1
+    coderay_tab_width: 4
+    coderay_bold_every: 10
+    coderay_css: class
+
+include: [".htaccess"]
+exclude: ["lib", "config.rb", "Capfile", "config", "log", "Rakefile", "Rakefile.rb", "tmp", "less", "*.sublime-project", "*.sublime-workspace", "test", "spec", "Gruntfile.js", "package.json", "node_modules"]
