--- a/_config.yml
+++ b/_config.yml
@@ -13,10 +13,10 @@ owner:
   email:          thomas.lodato@gmail.com.com
   # Social networking links used in footer. Update and remove as you like.
   twitter:        "blckmtlrbtdth"
-  facebook:       #"michaelrose"
+  facebook:       #
   github:         "deathpillow"
-  linkedin:       #"michaelrose"
-  instagram:      #"mmistakes"
+  linkedin:       #
+  instagram:      "blckmtlrbtdth"
   tumblr:         #"mademistakes"
   stackexchange:  
   flickr:                 
