change subtitle title

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title:            ThmsJmsLdt
-description:      In school for life.
+title:            Thomas James Lodato
+description:      design researcher
 logo:             site-logo.png
 disqus_shortname: #sosimpletheme
 search:           true
