--- a/_config.yml
+++ b/_config.yml
@@ -10,13 +10,13 @@ url:              http://deathpillow.github.io
 owner:
   name:           Thomas James Lodato
   avatar:         #michael-rose-photo.jpg
-  email:          thomas.lodato@gmail.com.com
+  email:          thomas.lodato@gatech.edu
   # Social networking links used in footer. Update and remove as you like.
-  twitter:        "blckmtlrbtdth"
+  twitter:        #"blckmtlrbtdth"
   facebook:       #
   github:         "deathpillow"
   linkedin:       #
-  instagram:      "blckmtlrbtdth"
+  instagram:      #"blckmtlrbtdth"
   tumblr:         #"mademistakes"
   stackexchange:  
   flickr:                 
