--- a/_config.yml
+++ b/_config.yml
@@ -15,9 +15,9 @@ owner:
   twitter:        #"blckmtlrbtdth"
   facebook:       #
   github:         "deathpillow"
-  linkedin:       #
-  instagram:      #"blckmtlrbtdth"
-  tumblr:         #"mademistakes"
+  linkedin:       www.linkedin.com/pub/thomas-lodato/7a/a29/41a/
+  instagram:      #
+  tumblr:         #
   stackexchange:  
   flickr:                 
   # For Google Authorship https://plus.google.com/authorship
