--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ owner:
   twitter:        #"blckmtlrbtdth"
   facebook:       #
   github:         "deathpillow"
-  linkedin:       www.linkedin.com/pub/thomas-lodato/7a/a29/41a/
+  linkedin:       "thomas-lodato/7a/a29/41a/"
   instagram:      #
   tumblr:         #
   stackexchange:  
