--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ owner:
   avatar:         #michael-rose-photo.jpg
   email:          thomas.lodato@gatech.edu
   # Social networking links used in footer. Update and remove as you like.
-  twitter:        #"blckmtlrbtdth"
+  twitter:        "thomas_lodato"
   facebook:       #
   github:         "deathpillow"
   linkedin:       "thomas-lodato/7a/a29/41a/"
