--- a/_config.yml
+++ b/_config.yml
@@ -44,7 +44,7 @@ owner:
   facebook: #username
   github: #username
   stackexchange: #http://stackoverflow.com/users/123456/username
-  linkedin: https://www.linkedin.com/in/thomasjameslodato
+  linkedin: #https://www.linkedin.com/in/thomasjameslodato
   instagram: #username
   flickr: #username
   tumblr: #username
