--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 
 title: Thomas James Lodato
 locale: en_US
-description: post-digital work, design research, labor politics
+description: flexible work, design research, user experience, civics
 logo: site-logo.png
 search: true
 url: http://thomaslodato.info
