--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ twitter_username: thomas_lodato
 github_username:  deathpillow
 linkedin_username:  thomasjameslodato
 
-permalink: none
+permalink: /:categories/:title/
 
 
 # Build settings
